--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,25 +1,24 @@
-#\u6570\u636e\u5e93\u914d\u7f6e\u5730\u5740
-jdbc.url=jdbc:mysql://mysql.myph.com:3306/maiyaph?useUnicode=true&characterEncoding=utf8&autoReconnect=true&autoReconnectForPools=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-jdbc.username=maiyaph
-jdbc.password=maiyaph
+#数据库配置地址
+jdbc.url=jdbc:mysql://127.0.0.1:3306/way?useUnicode=true&characterEncoding=utf8&autoReconnect=true&autoReconnectForPools=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+jdbc.username=root
+jdbc.password=123456
 
-#\u76f8\u5173\u94fe\u63a5\u7684\u521d\u59cb\u5316\u914d\u7f6e
-
-#\u6700\u5927\u8fde\u63a5\u6c60\u6570\u91cf
+#==========相关链接的初始化配置==========
+#最大连接池数量
 jdbc.max_active=10
-#\u521d\u59cb\u5316\u65f6\u5efa\u7acb\u7269\u7406\u8fde\u63a5\u7684\u4e2a\u6570
+#初始化时建立物理连接的个数
 jdbc.initial_size=5
-#\u6700\u5c0f\u8fde\u63a5\u6c60\u6570\u91cf
+#最小连接池数量
 jdbc.min_idle=5
 
-#\u76f8\u5173\u65f6\u95f4\u914d\u7f6e
-#\u6700\u5927\u7b49\u5f85\u6beb\u79d2\u6570
+#相关时间配置
+#最大等待毫秒数
 jdbc.max_wait=60000
-#\u7533\u8bf7\u8fde\u63a5\u7684\u65f6\u5019\u68c0\u6d4b\uff0c\u5355\u4f4d\u79d2
+#申请连接的时候检测，单位秒
 jdbc.timeBetweenEvictionRunsMillis=60000
 jdbc.minEvictableIdleTime=300000
 
-#druid filter paramter
+#druid 参数
 wall.db.type=mysql
 slow.sql.merge=true
 slow.sql.enable=true
