--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,18 @@
         </dependency>
         <dependency>
             <groupId>com.way</groupId>
+            <artifactId>base-service-api</artifactId>
+            <version>${base-service.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.way</groupId>
             <artifactId>base-service-impl</artifactId>
             <version>${base-service.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.way</groupId>
+            <artifactId>member-service-api</artifactId>
+            <version>${member-service.version}</version>
         </dependency>
         <dependency>
             <groupId>com.way</groupId>
