--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,7 @@
             classpath:spring/applicationContext-base.xml
             classpath:spring/applicationContext-dao.xml
             classpath:spring/applicationContext-redis.xml
+            classpath:spring/applicationContext-rest.xml
             classpath:spring/dubbo-provider-parent.xml
         </param-value>
     </context-param>
