--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,7 +1,10 @@
 #数据库配置地址
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&autoReconnectForPools=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-jdbc.username=root
-jdbc.password=
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&autoReconnectForPools=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+#jdbc.username=root
+#jdbc.password=
+jdbc.url=jdbc:mysql://mysql.myph.com:3306/maiyaph?useUnicode=true&characterEncoding=utf8&autoReconnect=true&autoReconnectForPools=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+jdbc.username=maiyaph
+jdbc.password=maiyaph
 
 #==========相关链接的初始化配置==========
 #最大连接池数量
