--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,24 +1,24 @@
-#Êı¾İ¿âÅäÖÃµØÖ·
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&autoReconnectForPools=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-jdbc.username=root
-jdbc.password=
+#æ•°æ®åº“é…ç½®åœ°å€
+jdbc.url=jdbc:mysql://103.255.178.23:3306/way?useUnicode=true&characterEncoding=utf8&autoReconnect=true&autoReconnectForPools=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+jdbc.username=way_dev
+jdbc.password=way_dev
 
-#==========Ïà¹ØÁ´½ÓµÄ³õÊ¼»¯ÅäÖÃ==========
-#×î´óÁ¬½Ó³ØÊıÁ¿
+#==========ç›¸å…³é“¾æ¥çš„åˆå§‹åŒ–é…ç½®==========
+#æœ€å¤§è¿æ¥æ± æ•°é‡
 jdbc.max_active=10
-#³õÊ¼»¯Ê±½¨Á¢ÎïÀíÁ¬½ÓµÄ¸öÊı
+#åˆå§‹åŒ–æ—¶å»ºç«‹ç‰©ç†è¿æ¥çš„ä¸ªæ•°
 jdbc.initial_size=5
-#×îĞ¡Á¬½Ó³ØÊıÁ¿
+#æœ€å°è¿æ¥æ± æ•°é‡
 jdbc.min_idle=5
 
-#Ïà¹ØÊ±¼äÅäÖÃ
-#×î´óµÈ´ıºÁÃëÊı
+#ç›¸å…³æ—¶é—´é…ç½®
+#æœ€å¤§ç­‰å¾…æ¯«ç§’æ•°
 jdbc.max_wait=60000
-#ÉêÇëÁ¬½ÓµÄÊ±ºò¼ì²â£¬µ¥Î»Ãë
+#ç”³è¯·è¿æ¥çš„æ—¶å€™æ£€æµ‹ï¼Œå•ä½ç§’
 jdbc.timeBetweenEvictionRunsMillis=60000
 jdbc.minEvictableIdleTime=300000
 
-#druid ²ÎÊı
+#druid å‚æ•°
 wall.db.type=mysql
 slow.sql.merge=true
 slow.sql.enable=true
