--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,5 +1,5 @@
 sms_url=http://192.168.1.163:10230/myLoan-SMS-RealTime/send/sendSMS
-#restTemplateÅäÖÃ ms
+#restTemplateé…ç½® ms
 rest.connect.timeout=10000
 rest.read.timeout=50000
 
