--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -3,4 +3,4 @@ sms_url=http://192.168.1.163:10230/myLoan-SMS-RealTime/send/sendSMS
 rest.connect.timeout=10000
 rest.read.timeout=50000
 
-isSend=true
+isSend=false
